--- a/profile.html
+++ b/profile.html
@@ -2,21 +2,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeetCode Record Center</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/leet.css">
     <link rel="stylesheet" href="./css/all.css">
-    <script src="./js/leet.js"></script>
+    <script src="./js/profile.js"></script>
+    <title>My Profile</title>
 </head>
-
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">
             <img src="./img/logo-sm.png" alt="BBFISH" width="30px" height="30px">
@@ -30,13 +27,13 @@
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Dashboard</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="leet.html" class="nav-link">LeetCode</a>
                 </li>
-                <li class="nav-items">
+                <li class="nav-item">
                     <a href="shop.html" class="nav-link">Shop</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a href="profile.html" class="nav-link">Profile</a>
                 </li>
             </ul>
@@ -46,33 +43,38 @@
             <a id="signout" style="color: #ff7b82 !important; display: none;"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </nav>
-        
-    <div class="body-section" id="score">
-        <div class="leet-logo">
-            <a href="https://leetcode.com/problemset/all/" target="_blank"><img src="./img/leet.png" alt="LeetCode" width="30%"></a>
-        </div>
-        <div class="leet-info">
-            <p>Go to LeetCode website via the logo above and complete a problem! Come back and click on the problem level that you just completed to give yourself a point reward!</p>
-        </div>
-        <div class="btn-score-display">
-            <div class="score-container">
-                <div id="easy" class="score easy-score" style="display: none;">+1</div>
-            </div>
-            <div class="score-container">
-                <div id="med" class="score medium-score" style="display: none;">+2</div>
-            </div>
-            <div class="score-container">
-                <div id="hard" class="score hard-score" style="display: none;">+3</div>
-            </div>
-        </div>
-        <div class="btn-group-horizontal">
-            <button type="button" class="btn btn-easy">Easy</button>
-            <button type="button" class="btn btn-medium">Medium</button>
-            <button type="button" class="btn btn-hard">Hard</button>
-        </div>
+
+    <div class="header-section box-shadow" id="greetMe">
+        <h1>Hello {{name}} ! Check out your profile here!</h1>
     </div>
 
-    <div class="void-space"></div>
+    <div class="body-section">
+        <div>
+            <h4>Purchase History</h4>
+        </div>
+        <table class="table table-light" style="text-align: center;">
+            <thead>
+                <tr>
+                    <th scope="col">Index</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Last Purchase</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody id="myItems">
+                <tr v-for="(item, index) in items">
+                    <td>{{index+1}}</td>
+                    <td>{{item.name}}</td>
+                    <td>{{item.quantity}}</td>
+                    <td><span>{{item.last}} </span></td>
+                    <td>
+                        <button type="button" class="btn btn-remove" v-on:click="remove(index)">Remove One</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
     <div class="footer-section">
         <p>Li Yuxuan @ 2020 All Rights Reserved</p>
@@ -109,16 +111,5 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
     </script>
-
-    <script>
-        new Vue({
-            el: "#app",
-            data: {
-                name: "BBFISH",
-            }
-        });
-    </script>
-    
 </body>
-
 </html>
