--- a/shop.html
+++ b/shop.html
@@ -2,22 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
+    <title>Shop</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/leet.css">
     <link rel="stylesheet" href="./css/all.css">
-    <script src="./js/point.js"></script>
-
+    <script src="./js/shop.js"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">
             <img src="./img/logo-sm.png" alt="BBFISH" width="30px" height="30px">
-            <span style="margin-left: 1rem">BBFISH TOWN</span>
+            <span style="margin-left: 1rem">THE TOWN</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,30 +34,81 @@
                 <li class="nav-item active">
                     <a href="shop.html" class="nav-link">Shop</a>
                 </li>
+                <li class="nav-item">
+                    <a href="profile.html" class="nav-link">Profile</a>
+                </li>
             </ul>
+        </div>
+        <div class="user-portal">
+            <a id="user-portal" href="login.html" style="color: #49c267 !important;" style="display: none;"><i class="fas fa-user-lock"></i></a>
+            <a id="signout" style="color: #ff7b82 !important; display: none;"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </nav>
 
     <div class="header-section box-shadow" id="greet">
-        <h1>HELLO {{name}}! You have <span style="color: #3c9e5a;">{{point}}</span> <i class="fab fa-viacoin"></i></h1>
+        <h1>Hello {{name}} ! You have <span style="color: #3c9e5a;">{{point}}</span> <i class="fab fa-viacoin"></i></h1>
     </div>
 
     <div class="body-section">
-
+        <table class="table table-dark" style="text-align: center;">
+            <thead>
+                <tr>
+                    <th scope="col">Index</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody id="items">
+                <tr v-for="(item, index) in items" v-if="!item.soldOut">
+                    <td>{{index+1}}</td>
+                    <td>{{item.data.name}}</td>
+                    <td>{{item.data.quantity}}</td>
+                    <td><span>{{item.data.price}} </span> <i class="fab fa-viacoin"></i></td>
+                    <td>
+                        <button type="button" class="btn btn-buy" v-on:click="buy(index)">BUY</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <div class="footer-section">
-
+        <p>Li Yuxuan @ 2020 All Rights Reserved</p>
+        <div class="social">
+            <span>Check out my GitHub | LinkedIn</span>
+            <div class="social-icons">
+                <a href="https://github.com/xmliszt" style="color: white; margin-right: 1rem;"><i class="fab fa-github-square"></i></a>
+                <a href="https://www.linkedin.com/in/li-yuxuan/" style="color: white;"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
     </div>
-</body>
 
-<script type="text/javascript">
-    new Vue({
-        el: "#greet",
-        data: {
-            name: "BBFISH",
-            point: point
-        }
-    });
-</script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyC6SFUbS3UHxY9mD3u8a8j_T9Nixi4Dg-Y",
+        authDomain: "bbfish-town.firebaseapp.com",
+        databaseURL: "https://bbfish-town.firebaseio.com",
+        projectId: "bbfish-town",
+        storageBucket: "bbfish-town.appspot.com",
+        messagingSenderId: "808191526396",
+        appId: "1:808191526396:web:b5e6bc2feab12979c35e79",
+        measurementId: "G-M4TZVEYVDX"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+    </script>
+
+</body>
 </html>
