--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
             </div>
             <button type="button" class="btn btn-login" id="login-btn">Log In</button>
             <div>
-                <a id="signup-alert" href="signup.html" style="display: none;">Don't have an account? Sign up now!</a>
+                <a id="signup-alert" href="signup.html">Don't have an account? Sign up now!</a>
             </div>
         </div>
     </div>
