--- a/signup.html
+++ b/signup.html
@@ -53,6 +53,7 @@
             </div>
             <div id="repeat-success" class="alert alert-success" style="display: none;"></div>
             <div id="repeat-alert" class="alert alert-danger" style="display: none;"></div>
+            <span style="color: grey">Your password is encrypted using PBKDF2 on AES over 100 iterations to ensure security.</span>
             <div id="alert-msg" class="alert alert-danger" style="display: none;"></div>
             <button type="button" class="btn btn-login" id="signup-btn">Sign Up</button>
         </div>
