--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/all.css">
-    <script src="./componenets/NavBar.js"></script>
     <script src="./js/index.js"></script>
     <title>The Town</title>
 </head>
@@ -38,6 +37,9 @@
                     <li class="nav-item">
                         <a href="profile.html" class="nav-link">Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="game.html" class="nav-link">Game</a>
+                    </li>
                 </ul>
             </div>
             <div class="user-portal">
@@ -53,6 +55,7 @@
 
     <div class="body-section">
         <a href="leet.html" class="btn btn1">LEETCODE RECORD CENTER</a>
+        <a href="game.html" class="btn btn2">STAR COLLECTOR GAME</a>
         <a class="btn" disabled>COMING SOON...</a>
     </div>
 
