--- a/signup.html
+++ b/signup.html
@@ -25,15 +25,21 @@
             <h1 style="margin-bottom: 3rem;">Signup</h1>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
+                    <span class="input-group-text" id="username-addon">Username</span>
+                </div>
+                <input id="username" type="text" class="form-control" placeholder="Username" aria-label="username" aria-describedby="username-addon">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
                     <span class="input-group-text" id="first-addon">First Name</span>
                 </div>
-                <input id="firstName" type="text" class="form-control" placeholder="first name" aria-label="firstName" aria-describedby="first-addon">
+                <input id="firstName" type="text" class="form-control" placeholder="first name (optional)" aria-label="firstName" aria-describedby="first-addon">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="last-addon">Last Name</span>
                 </div>
-                <input id="lastName" type="text" class="form-control" placeholder="last name" aria-label="lastName" aria-describedby="last-addon">
+                <input id="lastName" type="text" class="form-control" placeholder="last name (optional)" aria-label="lastName" aria-describedby="last-addon">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
