--- a/shop.html
+++ b/shop.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a href="profile.html" class="nav-link">Profile</a>
                 </li>
+                <li class="nav-item">
+                    <a href="game.html" class="nav-link">Game</a>
+                </li>
             </ul>
         </div>
         <div class="user-portal">
