--- a/signup.html
+++ b/signup.html
@@ -25,12 +25,6 @@
             <h1 style="margin-bottom: 3rem;">Signup</h1>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="username-addon">Username</span>
-                </div>
-                <input id="username" type="text" class="form-control" placeholder="Username" aria-label="username" aria-describedby="username-addon">
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
                     <span class="input-group-text" id="first-addon">First Name</span>
                 </div>
                 <input id="firstName" type="text" class="form-control" placeholder="first name (optional)" aria-label="firstName" aria-describedby="first-addon">
@@ -59,7 +53,7 @@
             </div>
             <div id="repeat-success" class="alert alert-success" style="display: none;"></div>
             <div id="repeat-alert" class="alert alert-danger" style="display: none;"></div>
-            <span style="color: grey">Your password is encrypted using PBKDF2 on AES over 100 iterations to ensure security.</span>
+            <p style="color: grey">Your password is encrypted using PBKDF2 on AES over 100 iterations to ensure security.</p>
             <div id="alert-msg" class="alert alert-danger" style="display: none;"></div>
             <button type="button" class="btn btn-login" id="signup-btn">Sign Up</button>
         </div>
